--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ main {
 }
 
 .producto {
-    background-color: #3dc91b;
+    background-color: #c91b75;
     padding: 1em;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0)
